Implement scrollbar fix + expand image button

--- a/app/assets/stylesheets/public/blocks/footer.sass
+++ b/app/assets/stylesheets/public/blocks/footer.sass
@@ -3,7 +3,7 @@
 .footer
   position: relative
   margin-top: -1px
-  padding: 15px
+  padding: 15px 0
   border-top: 1px solid $dark_600
   height: 66px
   color: #fff
@@ -29,7 +29,7 @@
     padding-bottom: 3px
     border-bottom: 1px dashed #fff
 
-.layout.lt_small_screent
+.layout.lt_small_screen
   .footer
     height: 46px
 
