--- a/app/views/public/landings/_guarantees.html.slim
+++ b/app/views/public/landings/_guarantees.html.slim
@@ -1,45 +1,46 @@
 .section.is-dark_gradient data-section='guarantees'
-  .columns
-    .column.is-16
-      .section-title
-        h2.section-title_inner
-          | Наши преимущества и предоставляемые гарантии
+  .js-scroll_fix
+    .columns
+      .column.is-16
+        .section-title
+          h2.section-title_inner
+            | Наши преимущества и предоставляемые гарантии
 
-  div
-    .columns.guarantee
-      .column.is-3.offset.is-by_3
-        .guarantee-image
-          img src=image_path("public/icons/#{@landing.color_scheme}/guarantee.png")
-      .column.is-7
-        .guarantee-title
-          .g-dashed
-            | 100% гарантия удачной покупки
-        .guarantee-text
-          | Если товар не устроит Вас, мы вернем Вам деньги.
+    div
+      .columns.guarantee
+        .column.is-3.offset.is-by_3
+          .guarantee-image
+            img src=image_path("public/icons/#{@landing.color_scheme}/guarantee.png")
+        .column.is-7
+          .guarantee-title
+            .g-dashed
+              | 100% гарантия удачной покупки
+          .guarantee-text
+            | Если товар не устроит Вас, мы вернем Вам деньги.
 
-    .columns.guarantee
-      .column.is-3.offset.is-by_3
-        .guarantee-image
-          img src=image_path("public/icons/#{@landing.color_scheme}/ship_everywhere.png")
-      .column.is-7
-        .guarantee-title
-          .g-dashed
-            | Доставка по всей России
-        .guarantee-text
-          | Доставка по всей России. Доставка курьером, в пункты самовывоза или почтовые отделения по всей РФ, в том числе без предоплаты.
+      .columns.guarantee
+        .column.is-3.offset.is-by_3
+          .guarantee-image
+            img src=image_path("public/icons/#{@landing.color_scheme}/ship_everywhere.png")
+        .column.is-7
+          .guarantee-title
+            .g-dashed
+              | Доставка по всей России
+          .guarantee-text
+            | Доставка по всей России. Доставка курьером, в пункты самовывоза или почтовые отделения по всей РФ, в том числе без предоплаты.
 
-    .columns.guarantee
-      .column.is-3.offset.is-by_3
-        .guarantee-image
-          img src=image_path("public/icons/#{@landing.color_scheme}/discount.png")
-      .column.is-7
-        .guarantee-title
-          | Низкие цены
-        .guarantee-text
-          | Мы работаем напрямую с производителем, поэтому можем позволить себе проводить акции.
+      .columns.guarantee
+        .column.is-3.offset.is-by_3
+          .guarantee-image
+            img src=image_path("public/icons/#{@landing.color_scheme}/discount.png")
+        .column.is-7
+          .guarantee-title
+            | Низкие цены
+          .guarantee-text
+            | Мы работаем напрямую с производителем, поэтому можем позволить себе проводить акции.
 
-  .columns
-    .column.is-16
-      .section-read_more
-        .g-dashed_light
-          | Нажмите, чтобы прочитать более <b>подробную информацию о предоставляемых гарантиях</b>
+    .columns
+      .column.is-16
+        .section-read_more
+          .g-dashed_light
+            | Нажмите, чтобы прочитать более <b>подробную информацию о предоставляемых гарантиях</b>
