--- a/app/views/public/landings/_photos_slider.html.slim
+++ b/app/views/public/landings/_photos_slider.html.slim
@@ -9,6 +9,8 @@
       .photos_slider-photo_wrap
         .photos_slider-photo_inner
           .photos_slider-photo.js-main_photo style="background-image: url(#{photos.first.image.gallery.url});"
+          .photos_slider-zoom_button
+            = fa_icon 'search-plus'
       .photos_slider-arrow_right.js-show_next_photo
         = fa_icon 'chevron-right'
       .photos_slider-previews
