--- a/app/views/public/landings/_description.html.slim
+++ b/app/views/public/landings/_description.html.slim
@@ -1,26 +1,28 @@
 div data-section='description'
   .section
-    .columns
-      .column.is-16
-        .section-title
-          h2.section-title_inner
-            = @landing.description_title
+    .js-scroll_fix
+      .columns
+        .column.is-16
+          .section-title
+            h2.section-title_inner
+              = @landing.description_title
 
-    .columns
-      .column.is-10.offset.is-by_3
-        = @landing.description_text.html_safe
-
-  .section.is-dark_gradient
-    .columns
-      .column.is-16
-        .section-title
-          h2.section-title_inner
-            = @landing.advantages_title
-
-    - if @landing.advantages_text
-      = @landing.advantages_text.html_safe
-    - else
       .columns
         .column.is-10.offset.is-by_3
-          p.section-text
-            | Текст с описанием преимуществ товара.
+          = @landing.description_text.html_safe
+
+  .section.is-dark_gradient
+    .js-scroll_fix
+      .columns
+        .column.is-16
+          .section-title
+            h2.section-title_inner
+              = @landing.advantages_title
+
+      - if @landing.advantages_text
+        = @landing.advantages_text.html_safe
+      - else
+        .columns
+          .column.is-10.offset.is-by_3
+            p.section-text
+              | Текст с описанием преимуществ товара.
