--- a/app/views/public/landings/_order.html.slim
+++ b/app/views/public/landings/_order.html.slim
@@ -1,15 +1,16 @@
 .section.is-dark
-  .columns
-    .column.is-16
-      .section-title
-        h2.section-title_inner
-          = @landing.footer_title
+  .js-scroll_fix
+    .columns
+      .column.is-16
+        .section-title
+          h2.section-title_inner
+            = @landing.footer_title
 
-      .section-description
-        | Только <b>27 ноября 2014</b> со <b>скидкой 40%</b>!
+        .section-description
+          | Только <b>27 ноября 2014</b> со <b>скидкой 40%</b>!
 
-  .columns
-    .photos_slider-wrap.column.is-7
-      = render 'photos_slider', modifier: 'footer'
-    .cta-wrap.column.is-7
-      = render 'cta_form', modifier: 'footer'
+    .columns
+      .photos_slider-wrap.column.is-7
+        = render 'photos_slider', modifier: 'footer'
+      .cta-wrap.column.is-7
+        = render 'cta_form', modifier: 'footer'
