--- a/app/views/public/landings/_footer.html.slim
+++ b/app/views/public/landings/_footer.html.slim
@@ -5,7 +5,7 @@
         .footer-copy
           | &copy; SaveMoneyShop.ru — это уникальные товары по низким ценам, акции&nbsp;и&nbsp;щедрые&nbsp;скидки.
         .footer-privacy
-          span data-modal=''
+          span data-modal=privacy_path
             | Политика конфиденциальности
         span.footer-about_us
           br
