Implement images gallery

--- a/app/assets/stylesheets/public/blocks/photos_slider.sass
+++ b/app/assets/stylesheets/public/blocks/photos_slider.sass
@@ -110,6 +110,7 @@
   border-radius: 3px
   transition: background 0.2s
   cursor: pointer
+  +no_select
 
   &:hover
     background: rgba(0, 0, 0, .5)
