--- a/app/assets/stylesheets/public/global.sass
+++ b/app/assets/stylesheets/public/global.sass
@@ -37,6 +37,7 @@
   border-bottom: 1px dashed $transparent_100
   padding-bottom: 3px
   cursor: pointer
+  +no_select
 
 .g-dashed
   font-weight: bold
