Implement "Thank you" modal

--- a/app/assets/stylesheets/public/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/public/blocks/modals/modal.sass
@@ -6,6 +6,10 @@
   box-shadow: 2px 2px 3px rgba(0, 0, 0, .05)
   text-align: left
 
+  &.has-no_header
+    .modal-body
+      border-radius: 5px
+
 .modal-header
   overflow: hidden
   padding: 15px 15px 15px 25px
