--- a/app/views/public/landings/show.html.slim
+++ b/app/views/public/landings/show.html.slim
@@ -1,10 +1,14 @@
-= render 'header'
-= render 'main_section'
-= render 'description'
-= render 'reviews'
-= render 'guarantees'
-= render 'shipping'
-= render 'order'
-= render 'footer'
+body data-view='app#landing_layout'
+  = render 'header'
+  = render 'main_section'
+  = render 'description'
+  = render 'reviews'
+  = render 'guarantees'
+  = render 'shipping'
+  = render 'order'
+  = render 'footer'
 
-= render 'modal'
+  = render 'modal'
+
+  - if params[:order_id]
+    div data-view='app#success' data={modal_path: public_landing_success_modal_path(order_id: params[:order_id])}
