--- a/app/assets/stylesheets/public/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/public/blocks/modals/modal.sass
@@ -33,8 +33,24 @@
   padding: 0
   border-radius: 0 0 5px 5px
 
+  h3
+    margin: 20px 25px -10px
+    font-size: 15px
+    font-weight: bold
+
   p
     margin: 20px 25px
+
+  ol
+    margin: 20px 25px
+    padding: 0
+    list-style-position: inside
+
+  li
+    margin-top: 5px
+
+    &:first-child
+      margin-top: 0
 
 .modal-fields
   padding: 15px
