--- a/app/assets/stylesheets/public/imports.sass
+++ b/app/assets/stylesheets/public/imports.sass
@@ -43,6 +43,14 @@ $red: #D20A2F
   -ms-user-select: none
   user-select: none
 
+=allow_select
+  -webkit-touch-callout: all
+  -webkit-user-select: all
+  -khtml-user-select: all
+  -moz-user-select: all
+  -ms-user-select: all
+  user-select: all
+
 =text_overflow
   display: block
   overflow: hidden !important
