--- a/app/views/public/landings/_shipping.html.slim
+++ b/app/views/public/landings/_shipping.html.slim
@@ -47,5 +47,5 @@
     .columns
       .column.is-16
         .section-read_more
-          .g-dashed_light
+          .g-dashed_light data-modal=delivery_path
             | Нажмите, чтобы прочитать более <b>подробную информацию о доставке</b>
