--- a/app/views/public/pages/privacy.html.slim
+++ b/app/views/public/pages/privacy.html.slim
@@ -1,6 +1,6 @@
 p
   b
-    | Сайт уважает ваше право и соблюдает конфиденциальность при заполнении, передачи и хранении ваших конфиденциальных сведений.
+    | Сайт уважает ваше право и соблюдает конфиденциальность при заполнении, передаче и хранении ваших конфиденциальных сведений.
 p
   b
     | Размещение заявки на сайте означает Ваше согласие на обработку данных.
@@ -9,5 +9,6 @@ p
 p
   | Целью обработки персональных данных является оказание сайтом услуг.
 p
-  | В случае отзыва согласия на обработку своих персональных данных мы обязуемся удалить Ваши персональные данные в срок не позднее 3 рабочих дней. Отзыв согласия можно отправить в электронном виде на наш электронный адресс.
+  ' В случае отзыва согласия на обработку своих персональных данных мы обязуемся удалить Ваши персональные данные в срок не позднее 3 рабочих дней.
+    Отзыв согласия можно отправить в электронном виде на наш электронный адрес — <b>savemoneyshop@gmail.com</b>.
 
