--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -18,11 +18,11 @@
           .top_menu-item.js-top_menu-item data-section-name='shipping'
             .top_menu-item_inner
               | Доставка
-          .top_menu-item
+          .top_menu-item data-modal=about_path
             .top_menu-item_inner
               span.top_menu-item_dashed
                 | О магазине
-          .top_menu-item
+          .top_menu-item data-modal=faq_path
             .top_menu-item_inner
               span.top_menu-item_dashed
                 | FAQ
