Adjust some colors

--- a/app/assets/stylesheets/public/blocks/header.sass
+++ b/app/assets/stylesheets/public/blocks/header.sass
@@ -5,7 +5,7 @@
   height: 49px
   color: #fff
   text-align: center
-  background: linear-gradient(lighten($light_500, 5%), $light_500)
+  background: linear-gradient(lighten($base, 5%), $base)
   box-shadow: 0 2px 3px rgba(0, 0, 0, .25)
   border-bottom: 1px solid rgba(0, 0, 0, .3)
   z-index: 2
