--- a/app/assets/stylesheets/public/blocks/top_menu.sass
+++ b/app/assets/stylesheets/public/blocks/top_menu.sass
@@ -10,10 +10,10 @@
   margin-left: -1px
   font-size: 14px
   text-shadow: 0 1px 1px rgba(0, 0, 0, .7)
-  color: lighten($transparent_50, 5%)
-  border: solid $dark_600
+  color: lighten($transparent_50, 10%)
+  border: solid $dark_700
   border-width: 0 1px
-  transition: box-shadow .2s
+  transition: box-shadow .2s, color .2s
 
   &:hover
     color: #fff
