--- a/app/assets/stylesheets/public/imports.sass
+++ b/app/assets/stylesheets/public/imports.sass
@@ -1,10 +1,10 @@
-$transparent_10: lighten($base, 60%)
-$transparent_50: lighten($base, 40%)
+$transparent_10: lighten($base, 52%)
+$transparent_50: lighten($base, 35%)
 $transparent_100: lighten($base, 32%)
 $light_200: lighten($base, 24%)
 $light_300: lighten($base, 16%)
 $light_400: lighten($base, 8%)
-$light_500: desaturate(lighten($base, 4%), 3%)
+$light_500: lighten($base, 4%)
 $dark_600: darken($base, 4%)
 $dark_700: darken($base, 8%)
 $dark_800: darken($base, 12%)
