--- a/app/assets/stylesheets/public/blocks/footer.sass
+++ b/app/assets/stylesheets/public/blocks/footer.sass
@@ -9,7 +9,7 @@
   color: #fff
   font-size: 13px
   line-height: 22px
-  background: $light_500
+  background: $base
   z-index: 2
   text-shadow: 0 1px 1px rgba(0, 0, 0, .7)
 
