Add more new colors

--- a/app/assets/stylesheets/public/color_schemes/test.css.sass
+++ b/app/assets/stylesheets/public/color_schemes/test.css.sass
@@ -1,9 +1,7 @@
-// теплый серый
-// $base: adjust-hue(#665D58, 135%)
+// aquamarine
+// $base: lighten(#507575, 8%)
 
-// теплый бежевый
-// $base: #816141
+$base: darken(#AB8770, 7%)
+// $base: lighten(#826556, 5%)
 
-// фиолетовый
-$base: #4C6EA3
 @import '../all'
