Implement cross-browser fixes for landings

--- a/app/assets/stylesheets/public/blocks/section.sass
+++ b/app/assets/stylesheets/public/blocks/section.sass
@@ -7,6 +7,7 @@
   border-bottom: 1px solid $transparent_50
 
   &.is-dark_gradient
+    background: $transparent_10
     background: linear-gradient(lighten($transparent_10, 3%), $transparent_10)
 
   &.is-dark
