--- a/app/assets/stylesheets/public/blocks/cta_form.sass
+++ b/app/assets/stylesheets/public/blocks/cta_form.sass
@@ -11,6 +11,7 @@
   position: relative
   border: 1px solid $dark_600
   padding: 8px
+  background: lighten($light_500, 5%)
   background: linear-gradient(lighten($light_500, 5%), $light_500)
   border-radius: 3px
   z-index: 2
@@ -19,6 +20,7 @@
   border: 1px solid $light_500
   border-radius: 3px
   padding: 15px
+  background: lighten($transparent_10, 3%)
   background: linear-gradient(lighten($transparent_10, 3%), $transparent_10)
 
 .cta_form-field
