--- a/app/assets/stylesheets/public/blocks/header.sass
+++ b/app/assets/stylesheets/public/blocks/header.sass
@@ -5,6 +5,7 @@
   height: 49px
   color: #fff
   text-align: center
+  background: lighten($base, 5%)
   background: linear-gradient(lighten($base, 5%), $base)
   box-shadow: 0 2px 3px rgba(0, 0, 0, .25)
   border-bottom: 1px solid rgba(0, 0, 0, .3)
