--- a/app/assets/stylesheets/public/blocks/sub_header.sass
+++ b/app/assets/stylesheets/public/blocks/sub_header.sass
@@ -8,6 +8,7 @@
   height: 40px
   padding: 5px 0
   text-align: center
+  background: lighten($transparent_10, 3%)
   background: linear-gradient(lighten($transparent_10, 3%), $transparent_10)
   box-shadow: 0 2px 3px rgba(0, 0, 0, .25)
   z-index: 110
