Implement pulsating timer

--- a/app/assets/stylesheets/public/blocks/sub_header.sass
+++ b/app/assets/stylesheets/public/blocks/sub_header.sass
@@ -90,8 +90,12 @@
     line-height: 33px
     background: $text_light
     color: #fff
-    font-size: 14px
+    font-size: 16px
     border-radius: 3px
+    transition: font-size .1s
+
+    &.animate-zoom
+      font-size: 14px
 
 .sub_header-seconds
   margin-right: 0
