--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -45,17 +45,17 @@
             = fa_icon 'chevron-right'
           .sub_header-time_left_message
             | До конца акции осталось
-          .sub_header-timer
+          .sub_header-timer data-view='app#timer'
             .sub_header-hours
-              | <span>1</span> час
+              | <span class="js-hours">&ndash;</span> час
             .sub_header-timer_delimiter
               | :
             .sub_header-minutes
-              | <span>59</span> мин.
+              | <span class="js-minutes">&ndash;</span> мин.
             .sub_header-timer_delimiter
               | :
             .sub_header-seconds
-              | <span>59</span> сек.
+              | <span class="js-seconds">&ndash;</span> сек.
           .sub_header-arrow
             = fa_icon 'chevron-right'
           .sub_header-button
