--- a/app/assets/stylesheets/public/blocks/footer.sass
+++ b/app/assets/stylesheets/public/blocks/footer.sass
@@ -30,7 +30,7 @@
     padding-bottom: 3px
     border-bottom: 1px dashed #fff
 
-.layout.lt_small_screen
+.layout.lt-small_screen
   .footer
     height: 46px
 
