--- a/app/assets/stylesheets/public/blocks/sub_header.sass
+++ b/app/assets/stylesheets/public/blocks/sub_header.sass
@@ -53,7 +53,8 @@
   color: $red
 
   span
-    text-decoration: line-through
+    font-size: 14px
+    // text-decoration: line-through
 
 .sub_header-time_left_message
   float: left
