--- a/app/views/public/landings/_cta_form.html.slim
+++ b/app/views/public/landings/_cta_form.html.slim
@@ -1,7 +1,7 @@
 - modifier ||= nil
-- options = [['Мне нужно 1 шт.', 1], ['Мне нужно 2 шт.', 2], ['Мне нужно 3 шт.', 3], ['Мне нужно 4 шт.', 4], ['Мне нужно 5 шт.', 5]]
+- options = (1..10).map { |items_num| ["Мне нужно #{items_num} шт.", items_num] }
 
-.cta_form class=("for-#{modifier}" if modifier) data-view='app#form' data={full_price: '990'}
+.cta_form class=("for-#{modifier}" if modifier) data-view='app#form' data={full_price: @landing.public_price}
   .cta_form-wrap
     .cta_form-inner
       .clearfix
@@ -20,13 +20,13 @@
       button.cta_form-button.js-order_button
         | Заказать за <b>990</b> рублей &rarr;
     .cta_form-info
-      ' Артикул товара: <b>#24177420</b>. Сделайте заказ, и мы перезвоним вам в течение нескольких&nbsp;минут,
+      ' Артикул товара: <b>##{@landing.apishops_article_id}</b>. Оставьте ваш телефон, и мы перезвоним вам в течение нескольких&nbsp;минут,
       ' или&nbsp;позвоните нам по&nbsp;телефону
       | <b>#{fa_icon('phone')} 8-804-333-00-69</b> (круглосуточно,&nbsp;бесплатно,&nbsp;24/7).
   .price_tag
     .price_tag-inner
-      | &ndash; 40%
+      | &ndash; #{@landing.discount}%
       span.price_tag-price_old
-        | 1990 руб.
+        | #{@landing.public_price_without_discount} руб.
       span.price_tag-price_new
-        | 990 руб.
+        | #{@landing.public_price} руб.
