Allow to publish landing

--- a/app/views/admin/landings/edit.html.slim
+++ b/app/views/admin/landings/edit.html.slim
@@ -21,6 +21,7 @@
         = render 'admin/landings/form/reviews', landing: @landing, f: f
         = render 'admin/landings/form/footer_order', landing: @landing, f: f
         = render 'admin/landings/form/seo', landing: @landing, f: f
+        = render 'admin/landings/form/publishing', landing: @landing, f: f
 
         .panel-footer
           .fl_r
