--- a/app/assets/stylesheets/admin/global.sass
+++ b/app/assets/stylesheets/admin/global.sass
@@ -1,3 +1,5 @@
+@import 'admin/imports'
+
 .clearfix:before,
 .clearfix:after
   content: ""
@@ -21,3 +23,5 @@
 .hidden_absolutely
   display: none !important
 
+.g-red
+  color: $red_dark
