Autofocus phone field

--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -58,8 +58,8 @@
               | <span class="js-seconds">&ndash;</span> сек.
           .sub_header-arrow
             = fa_icon 'chevron-right'
-          .sub_header-button
+          .sub_header-button data-section-name='main'
             | Заказать со скидкой <b>#{@landing.discount}%</b> &rarr;
-          .sub_header-ipad_button
+          .sub_header-ipad_button data-section-name='main'
             | Заказать<br>со скидкой <b>#{@landing.discount}% &rarr;</b>
 
