Integrate with Apishops

--- a/app/views/layouts/public_landing.html.slim
+++ b/app/views/layouts/public_landing.html.slim
@@ -10,6 +10,7 @@ html.layout
 
     = stylesheet_link_tag "public/color_schemes/#{@landing.color_scheme}"
     = javascript_include_tag 'public/application'
+    = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
 
     javascript:
       syze
