--- a/app/views/public/landings/success_modal.html.slim
+++ b/app/views/public/landings/success_modal.html.slim
@@ -10,6 +10,6 @@
       | Ожидайте звонка оператора в течение часа, или в ближайший рабочий день, если сегодня выходной.
     p
       | Вы так же сами можете позвонить нам, чтобы уточнить детали заказа, по&nbsp;телефону&nbsp;<b>+8-804-333-00-69</b>.
-        Не забудьте при этом сказать оператору номер вашего заказа (<b>##{params[:order_id]}</b>) и артикул товара (<b>#24177420</b>).
+        Не забудьте при этом сказать оператору номер вашего заказа (<b>##{params[:order_id]}</b>) и артикул товара (<b>##{@landing.apishops_article_id}</b>).
     p
       | После уточнения деталей доставки, товар будет <b>бережно упакован</b> и <b>доставлен по вашему адресу</b>!
