--- a/app/views/layouts/public_landing.html.slim
+++ b/app/views/layouts/public_landing.html.slim
@@ -8,6 +8,8 @@ html.layout
     meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'
     meta name='viewport' content='width=device-width, initial-scale=1.0'
 
+    = include_gon
+
     = stylesheet_link_tag "public/color_schemes/#{@landing.color_scheme}"
     = javascript_include_tag 'public/application'
     = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
