Add new phone number

--- a/app/views/public/landings/_cta_form.html.slim
+++ b/app/views/public/landings/_cta_form.html.slim
@@ -30,7 +30,7 @@
     .cta_form-info
       ' Артикул товара: <b>##{@landing.apishops_article_id}</b>. Оставьте ваш телефон, и мы перезвоним вам в течение нескольких&nbsp;минут,
       ' или&nbsp;позвоните нам по&nbsp;телефону
-      | <b>#{fa_icon('phone')} 8-804-333-00-69</b> (круглосуточно,&nbsp;бесплатно,&nbsp;24/7).
+      | <b>#{fa_icon('phone')} #{Landing::PHONE}</b> (круглосуточно,&nbsp;бесплатно,&nbsp;24/7).
 
   .price_tag
     .price_tag-inner
