--- a/app/assets/stylesheets/public/blocks/cta_form.sass
+++ b/app/assets/stylesheets/public/blocks/cta_form.sass
@@ -128,3 +128,5 @@
     font-size: 13px
     white-space: nowrap
     vertical-align: -1px
+    color: lighten($transparent_50, 15%)
+    letter-spacing: 0.3px
