--- a/app/assets/stylesheets/public/blocks/section.sass
+++ b/app/assets/stylesheets/public/blocks/section.sass
@@ -33,6 +33,10 @@
   padding: 30px 0 0
   text-align: center
 
+  &.for-reviews
+    padding-top: 40px
+    margin-bottom: -10px
+
 .section-subtitle
   padding: 30px 0 20px
   font-size: 18px
