--- a/app/views/public/landings/_reviews.html.slim
+++ b/app/views/public/landings/_reviews.html.slim
@@ -24,3 +24,9 @@
 
               | <b>#{review.author}</b>, #{review.author_profession}
 
+
+    .columns
+      .column.is-16
+        .section-read_more.for-reviews
+          b
+            | Станьте и вы счастливым обладателем этого чудо-шланга, сделайте заказ прямо сейчас!
