--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -1,8 +1,14 @@
 doctype html
 html.layout
   head
-    title= @landing.html_title
-    meta name='description' content=@landing.meta_description
+    title
+      - if content_for?(:title)
+        = content_for(:title)
+      - else
+        | SaveMoneyShop.ru — это уникальные товары по низким ценам, акции и щедрые скидки.
+
+    - if content_for?(:meta_description)
+      = content_for(:meta_description)
 
     meta charset='utf-8'
     meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'
@@ -10,9 +16,13 @@ html.layout
 
     = include_gon
 
-    = stylesheet_link_tag "public/color_schemes/#{@landing.color_scheme}"
+    - if content_for?(:stylesheet)
+      = content_for(:stylesheet)
+
     = javascript_include_tag 'public/application'
-    = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
+
+    - if content_for?(:script)
+      - content_for(:script)
 
     javascript:
       syze
