--- a/app/views/public/landings/show.html.slim
+++ b/app/views/public/landings/show.html.slim
@@ -1,3 +1,15 @@
+- content_for :title do
+  = @landing.html_title
+
+- content_for :meta_description do
+  meta name='description' content=@landing.meta_description
+
+- content_for :stylesheet do
+  = stylesheet_link_tag "public/color_schemes/#{@landing.color_scheme}"
+
+- content_for :script do
+  = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
+
 body data-view='app#landing_layout'
   = render 'header'
   = render 'main_section'
