--- a/app/views/public/pages/home.html.slim
+++ b/app/views/public/pages/home.html.slim
@@ -15,27 +15,29 @@ body
       .products_list-wrapper
         - @landings.each do |landing|
           .product
-            .product-image.fl_l style="background-image: url(#{landing.landing_images.first.image.gallery.url});"
-            .product-info.g-overflow
-              .product-title
-                = landing.title.gsub('<br>', ' ')
-              .product-description
-                = landing.meta_description
-              .product-details
-                .product-prices.fl_l
-                  span.product-new_price
-                    | #{landing.public_price} рублей
-                  span.product-price_delimeter
-                    | /
-                  span.product-old_price
-                    | вместо <span>#{landing.public_price_without_discount} рублей</span>
-                .fl_r
-                  .product-button
-                    | Посмотреть акцию &rarr;
+            .clearfix
+              .product-image.fl_l style="background-image: url(#{landing.landing_images.first.image.gallery.url});"
+              .product-info.g-overflow
+                .product-title
+                  = landing.title.gsub('<br>', ' ')
+                .product-description
+                  = landing.meta_description
+                .product-details
+                  .product-prices.fl_l
+                    span.product-new_price
+                      | #{landing.public_price} рублей
+                    span.product-price_delimeter
+                      | /
+                    span.product-old_price
+                      | вместо <span>#{landing.public_price_without_discount} рублей</span>
+                  .fl_r
+                    .product-button
+                      | Посмотреть акцию &rarr;
 
     .guarantees
       .guarantees-title
-        | Предоставляемые гарантии
+        span.g-dashed
+          | Предоставляемые гарантии
       .guarantees-info
         .guarantee
           .guarantee-image.fl_l
@@ -51,7 +53,8 @@ body
             img src=image_path('public/icons/blue/ship_everywhere.png')
           .g-overflow
             .guarantee-title
-              | Доставка по всей России
+              span.g-dashed
+                | Доставка по всей России
             .guarantee-text
               | Доставка курьером, в пункты самовывоза или почтовые отделения по всей РФ, в том числе без предоплаты.
 
@@ -66,7 +69,8 @@ body
 
     .shipping
       .shipping-title
-        | Как мы работаем и доставляем товары?
+        span.g-dashed
+          | Как мы работаем и доставляем товары?
       .shipping-list
         .shipping_item
           .shipping_item-image
@@ -75,7 +79,7 @@ body
             span.shipping_item-number>
               | 1
             span.shipping_item-text
-              | Вы оставляете заявку на сайте или по телефону
+              | Вы оставляете заявку на&nbsp;сайте или по &nbsp;телефону
         .shipping_item
           .shipping_item-image
             img src=image_path('public/icons/blue/phone_call.png')
@@ -83,7 +87,7 @@ body
             span.shipping_item-number>
               | 2
             span.shipping_item-text
-              | Менеджер связывается с Вами для подтверждения заказа
+              | Менеджер связывается с Вами для&nbsp;подтверждения&nbsp;заказа
         .shipping_item
           .shipping_item-image
             img src=image_path('public/icons/blue/shipping.png')
@@ -91,7 +95,7 @@ body
             span.shipping_item-number>
               | 3
             span.shipping_item-text
-              | Мы быстро доставляем Вашу посылку по указанному адресу
+              | Мы быстро доставляем Вашу посылку по&nbsp;указанному&nbsp;адресу
         .shipping_item
           .shipping_item-image
             img src=image_path('public/icons/blue/good_delivered.png')
@@ -99,10 +103,11 @@ body
             span.shipping_item-number>
               | 4
             span.shipping_item-text
-              | Вы получаете свой товар и платите за него на почте или курьеру
+              | Вы получаете свой товар и платите за&nbsp;него на&nbsp;почте или курьеру
 
     .footer
       .footer-copy
-        | &copy; SaveMoneyShop.ru — это уникальные товары по низким ценам, акции&nbsp;и&nbsp;щедрые&nbsp;скидки.
+        | <b>&copy; SaveMoneyShop.ru</b> — это уникальные товары по низким ценам, акции&nbsp;и&nbsp;щедрые&nbsp;скидки.
       .footer-privacy
-        | Политика конфиденциальности
+        span.g-dashed
+          | Политика конфиденциальности
