Add link to landing

--- a/app/assets/stylesheets/public/main_page.css.sass
+++ b/app/assets/stylesheets/public/main_page.css.sass
@@ -113,6 +113,7 @@ $base: #54709b
     text-decoration: line-through
 
 .product-button
+  display: block
   margin: 0
   padding: 0 15px
   height: 37px
