Add bg gradient

--- a/app/assets/stylesheets/public/main_page.css.sass
+++ b/app/assets/stylesheets/public/main_page.css.sass
@@ -17,6 +17,10 @@ $base: #54709b
   line-height: 27px
   font-weight: bold
 
+.layout
+  background: $transparent_10
+  background: linear-gradient(#fff, darken($transparent_10, 2%))
+
 .main
   margin: 0 auto
   width: 730px
