Implement modals for main page

--- a/app/assets/stylesheets/public/main_page.css.sass
+++ b/app/assets/stylesheets/public/main_page.css.sass
@@ -2,9 +2,9 @@ $base: #54709b
 
 @import 'normalize-css/normalize'
 @import 'font-awesome'
-@import 'skeleton1200'
 @import 'global'
 @import 'layout'
+@import 'blocks/modals/*'
 
 =title
   font-size: 25px
