--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -43,19 +43,22 @@
               | вместо <span>#{@landing.public_price_without_discount} рублей</span>
           .sub_header-arrow
             = fa_icon 'chevron-right'
-          .sub_header-time_left_message
-            | До конца акции осталось
-          .sub_header-timer data-view='app#timer'
-            .sub_header-hours
-              | <span class="js-hours">&ndash;</span> час
-            .sub_header-timer_delimiter
-              | :
-            .sub_header-minutes
-              | <span class="js-minutes">&ndash;</span> мин.
-            .sub_header-timer_delimiter
-              | :
-            .sub_header-seconds
-              | <span class="js-seconds">&ndash;</span> сек.
+
+          .timer.for-subheader data-view='app#timer' data={landing_id: @landing.id}
+            .timer-message
+              | До конца акции осталось
+            .timer-wrapper
+              .timer-hours
+                | <span class="js-hours">&ndash;</span> час
+              .timer-delimiter
+                | :
+              .timer-minutes
+                | <span class="js-minutes">&ndash;</span> мин.
+              .timer-delimiter
+                | :
+              .timer-seconds
+                | <span class="js-seconds">&ndash;</span> сек.
+
           .sub_header-arrow
             = fa_icon 'chevron-right'
           .sub_header-button data-section-name='main'
